<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="productViewModel"
            type="com.anelcc.harrypotter.products.ProductViewModel" />
        <variable
            name="handlerClickListener"
            type="com.anelcc.harrypotter.products.HandlerClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="@{() -> handlerClickListener.itemClicked(productViewModel)}"
        app:cardElevation="@dimen/corner_radius"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="8dp"
                android:text="@{productViewModel.title}"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/product_description_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="90"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/xsmall_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_product">

                <ImageView
                    android:id="@+id/image_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/product_image_desc"
                    android:src="@drawable/ic_favorite_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/author_product"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/author_product"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{productViewModel.author}"
                    android:textSize="@dimen/text_size_author"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favorite_product"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="70"
                    app:layout_constraintStart_toEndOf="@+id/image_product"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/product_author" />

                <ToggleButton
                    android:id="@+id/favorite_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_favorite"
                    android:checked="@{productViewModel.favorite}"
                    android:onClick="@{() -> handlerClickListener.favoriteClicked(productViewModel)}"
                    android:contentDescription="@string/favorite_desc"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="10"
                    app:layout_constraintStart_toEndOf="@+id/author_product"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:checked="true" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>